# OpenGL2D

./: CMakeLists.txt
src/: main.cpp
